--- a/frontend-spa/index.html
+++ b/frontend-spa/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 5 Project</title>
+    <link></link>
 </head>
 
 <body>
 
 </body>
 
+<script></script>
 </html>
