--- a/frontend-spa/src/index.html
+++ b/frontend-spa/src/index.html
@@ -67,6 +67,43 @@
         </div>
 
     </div>   -->
+<div class="containter m-3">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="albumElement col">
+            <div class="card h-100">
+                <div class="card-body">
+
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Artist name" aria-label="Artist name">
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Album name" aria-label="Album name">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Record label" aria-label="Record label">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Description" aria-label="Description">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
     <script src="./js/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
