--- a/frontend-spa/src/index.html
+++ b/frontend-spa/src/index.html
@@ -67,7 +67,7 @@
         </div>
 
     </div>   -->
-<div class="containter m-3">
+<!-- <div class="containter m-3">
     <div class="row row-cols-1 row-cols-md-3 g-4">
 
         <div class="albumElement col">
@@ -103,7 +103,7 @@
         </div>
 
     </div>
-</div>
+</div> -->
 
     <script src="./js/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
